@@ -1,6 +1,7 @@
 ﻿local E, L, P, G = unpack(select(2, ...)); --Inport: Engine, Locales, ProfileDB, GlobalDB
 
 P.gridSize = 64
+P.farmSize = 340
 
 --Core
 P['general'] = {
