@@ -4,11 +4,12 @@
 *Add slash command "/grid" it's arguements can be 4-256. If no arguements then the grid will be hidden.
 *Add slash command "/gr" to automatically change the channel you're talking in to the highest channel available.
 
-[b]General Changes[/b]
+[b]Changes[/b]
 *Removed the WhisperLevel option I added previously because it was a pain to debug myself. And it was flawed.
 *Routes and GatherMate2 addons will now use both minimaps instead of just the farmmode map.
 *Chat frames without backdrops should now properly hide their chat tabs unless mouseovered.
 *Remove the minimum requirement of .64 to the UIScale. It still however cannot go over 1.
+*The slash command "/farmmode" now accepts arguements to set the size of the FarmMode map.
 
 [b]Fixes[/b]
 *Fix the BNConversation prefix in chat.
